--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@ from a slug:</p>
 </div>
 
 
-<p>h3. Multiple slug generators</p>
+<h3>Multiple slug generators</h3>
 
 <p>The <code>slugged</code> method takes a list of method names (as symbols) or <code>Procs</code> that
 each attempt to generate a slug. Each of these generators is tried in order
