--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@ another user with the same name, and that user will get the slug
 "sancho-sample;2". The semicolon is the default ID separator (and it can be
 overridden).</p>
 
-<p>h3. Scoped slugs</p>
+<h3>Scoped slugs</h3>
 
 <p>Slugs must normally be unique for a single model type. Thus, if you have a
 <code>User</code> named Hammer and a <code>Product</code> named hammer, they can both share the
